# ART-Training

./: README.md  pyproject.toml  test_judge_mini.py  test_judges.py  test_rollout_gpt5_judges.py
src/job-offer/: __init__.py  custom_backend.py  get_judge_completion.py  rollout.py  train.py  train_with_setup.py
